# ng

./: .gitignore  CMakeLists.txt  README.md
doc/: buckingham_pi_theorem.md  coding_guidelines.md  ga.md  ng.md  ng.txt  scope.md  table.md  value.md
foo/: op.py
gtest-download/: CMakeLists.txt  CMakeLists.txt.in
libng/: CMakeLists.txt  ng_ascii_util.c  ng_ascii_util.h  ng_color.c  ng_color.h  ng_interval.c  ng_interval.h  ng_nfa.c  ng_nfa.h  ng_nfa_factory.c  ng_nfa_factory.h  ng_nfa_state.c  ng_nfa_state.h  ng_parser.c  ng_parser.h  ng_rb_tree.c  ng_rb_tree.h  ng_rb_tree_node.c  ng_rb_tree_node.h  ng_symbol_table.c  ng_symbol_table.h  ng_symbol_table_entry.c  ng_symbol_table_entry.h  ng_symbol_table_entry.t.c  ng_token.c  ng_token.h  ng_token_array.c  ng_token_array.h  ng_token_array_entry.c  ng_token_array_entry.h  ng_vector.c  ng_vector.h
min/: min.md  mng.cpp
ng_util/: CMakeLists.txt  README.md  ng_util_io.c  ng_util_io.h
ngpp/: CMakeLists.txt  Nfa.cpp  Nfa.h  Parser.cpp  Parser.h
prolog/: ng.pl
python/: ex.ng  p.py
src/: CMakeLists.txt  Makefile  ng_main.c
test/: CMakeLists.txt  Makefile  Nfa.d.cpp  Nfa.t.cpp  Parser.d.cpp  Parser.t.cpp  ng.ideal  ng.min  ng.ng  ng_ascii_util.t.cpp  ng_c_tricks.t.cpp  ng_color.t.c  ng_color.t.cpp  ng_color.t.h  ng_interval.t.c  ng_interval.t.cpp  ng_interval.t.h  ng_nfa.t.c  ng_nfa.t.cpp  ng_nfa.t.h  ng_nfa_factory.t.c  ng_nfa_factory.t.cpp  ng_nfa_factory.t.h  ng_nfa_state.t.c  ng_nfa_state.t.cpp  ng_nfa_state.t.h  ng_parser.t.c  ng_parser.t.cpp  ng_parser.t.h  ng_rb_tree.t.c  ng_rb_tree.t.cpp  ng_rb_tree.t.h  ng_rb_tree_node.t.c  ng_rb_tree_node.t.cpp  ng_rb_tree_node.t.h  ng_symbol_table.t.c  ng_symbol_table.t.cpp  ng_symbol_table.t.h  ng_symbol_table_entey.t.c  ng_symbol_table_entry.t.c  (+19 more)
test/edge_cases.ng/: 1_lang.ng  merge.ng
